[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "gander-yolox"
version = "0.4.2"
description = "Lightweight, open-source, high-performance Yolo implementation.  This fork makes minor changes to support fp16 model output."
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Pixeltable, Inc.", email = "contact@pixeltable.com" }]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.26.4",
    "torch>=2.2.2",
    "opencv-python>=4.10.0.84",
    "loguru>=0.7.2",
    "tqdm>=4.67.1",
    "torchvision>=0.17.2",
    "thop>=0.1.1.post2209072238",
    "ninja>=1.11.1.1",
    "tabulate>=0.9.0",
    "psutil>=5.9.7",
    "tensorboard>=2.18.0",
    "pycocotools>=2.0.7",
    "onnx>=1.17.0",
    "onnxsim>=0.4.10",
    "onnxruntime>=1.20",
    "onnxconverter-common>=1.16.0",
    "onnxscript>=0.5.6",
]

[project.urls]
repository = "https://github.com/unchartedsoftware/gander-yolox"

[project.scripts]
yolox = "yolox.cli:main"


[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = ["pytest~=8.3.3", "pytest-xdist[psutil]~=3.3.1"]

[tool.hatch.build.targets.wheel]
packages = ["yolox"]
